ingress-controller/hello-world-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-1
spec:
  selector:
    matchLabels:
      greeting: hello
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
        version: one
    spec:
      containers:
        - name: electric
          image: patelajay745/ecommerce-ele:v1
