ingress-controller/hello-world-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
