ingress-controller/hello-world-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
spec:
  type: NodePort
  selector:
    greeting: hello
    version: two
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
